<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YourTasks</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_task_list">Aufgabenliste</string>
    <string name="action_projects">Projektliste</string>
    <string name="action_edit_project">Projekt bearbeiten</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_prio">Prio</string>
    <string name="title_activity_task_details">Aufgabendetails</string>
    <string name="btn_plus_description">Neue Aufgabe anlegen</string>
    <string name="btn_refresh_description">Neu laden</string>
    <string name="btndel_description">Aufgabe löschen</string>
    <string name="action_new">Neu</string>
    <string name="action_accept">OK</string>
    <string name="refresh">Aktualisieren</string>
    <string name="delete">Löschen</string>
    <string name="task_remove_message">Soll die Aufgabe wirklich unwiederbringlich gelöscht werden?</string>
    <string name="project_remove_message">Soll das Projekt wirklich unwiederbringlich gelöscht werden?</string>
    <string name="yes">Ja</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_activity_project_list">Projekte</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_project_details">Projektdetails</string>
    <string name="delete_question_title">Wirklich LÃ¶schen?</string>
    <string name="lbl_description">Beschreibung</string>
    <string name="erledigt_anzeigen">Erledigte anzeigen</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Beschreibung</string>
    <string name="hint_repeating_days">Tage (Wdh.)</string>
    <string name="no_connection">Verbindung zum Server nicht möglich!!</string>

</resources>