<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_new"
          android:icon="@android:drawable/ic_input_add"
          android:showAsAction="ifRoom" 
          android:title="@string/action_new"
          />
    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_menu_refresh"
          android:showAsAction="ifRoom"
          android:title="@string/refresh"
          />
    <group android:checkableBehavior="all">
        <item android:id="@+id/show_completed"
              android:title="@string/erledigt_anzeigen" />
    </group>
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />

</menu>
