<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TaskDetailsActivity" >
    
    <ImageButton
        android:id="@+id/task_details_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_cab_done_holo_light"
        android:contentDescription="@string/task_details_ok_description"/>

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblName"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/lblName"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblPrio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_toLeftOf="@+id/editName"
        android:text="@string/lbl_prio" />

    <EditText
        android:id="@+id/editPrio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editName"
        android:layout_below="@+id/editName"
        android:ems="10"
        android:inputType="number" 
        />
    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/task_details_ok"
        android:layout_below="@+id/task_details_ok"
        android:text="@string/lbl_name" 
        />
    <ImageButton
        android:id="@+id/btnDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/task_details_ok"
        android:layout_alignLeft="@+id/editName"
        android:src="@android:drawable/ic_delete"
        android:contentDescription="@string/btndel_description"
        />

</RelativeLayout>